--- a/example/index.html
+++ b/example/index.html
@@ -57,8 +57,8 @@
         <h2><small id="releases"></small></h2>
         <hr>
         <address>
-          <strong><i class="fas fa-terminal"></i> Version 1.0.0</strong>
-          <br>on August 10, 2020
+          <strong><i class="fas fa-terminal"></i> Version 1.1.2</strong>
+          <br>on August 17, 2020
           <br>
         </address>
         <address>
@@ -72,12 +72,11 @@
       <div class="col-md-8 mb-5">
         <h2 id="instalation"></h2>
         <hr>
-        <p>Just clone or download the zip of <a href="https://github.com/igor-stojcic/AutoTyping">this</a> GitHub repository</p>
-        <p>or via npm:</p>
+        <p>Just clone or download the zip of <a href="https://github.com/igor-stojcic/AutoTyping" target="_blank">this</a> GitHub repository</p>
+        <p>or via <a href="https://www.npmjs.com/package/autotyping" target="_blank">npm:</a></p>
         <div class="col-xl-6 col-lg-8 col-md-10 col-sm-8 col-12 bg-light">
           <div class="options p-3">
-            <p class="text-dark">$ yarn add AutoTyping</p>
-            <p class="text-muted m-0"># $ npm install --save AutoTyping</p>
+            <p class="text-muted m-0">npm install --save autotyping</p>
           </div>
         </div>
       </div>
