--- a/example/index.html
+++ b/example/index.html
@@ -72,7 +72,7 @@
       <div class="col-md-8 mb-5">
         <h2 id="instalation"></h2>
         <hr>
-        <p>Just clone or download the zip of <a href="https://github.com/igor-stojcic/AutoTyping" target="_blank">this</a> GitHub repository</p>
+        <p>Just clone or download the zip of <a href="https://github.com/igor-stojcic/AutoTyping.js" target="_blank">this</a> GitHub repository</p>
         <p>or via <a href="https://www.npmjs.com/package/autotyping" target="_blank">npm:</a></p>
         <div class="col-xl-6 col-lg-8 col-md-10 col-sm-8 col-12 bg-light">
           <div class="options p-3">
